--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -21,7 +21,7 @@
 
 .description {
   margin-top: 6px;
-  font-size: 25px;
+  font-size: 1.3rem;
   font-weight: 400;
 }
 
@@ -33,10 +33,11 @@
   flex-wrap: wrap;
   gap: 6px;
   list-style: none;
+  justify-content: center;
 }
 
 .skill {
-  font-size: 25px;
+  font-size: 1.3rem;
   font-weight: 400;
   border-radius: 100px;
   background: var(--color-dark);
@@ -53,7 +54,7 @@
 .link {
   text-decoration: none;
   color: var(--color-text);
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-weight: 600;
   border-radius: 100px;
   background: var(--color-primary);
