--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -74,7 +74,8 @@
     background-color: transparent;
     padding-left: 0;
     padding-right: 0;
-    
+    margin-top: 2em;
+    padding-bottom: 3em;
   }
 
   .content {
