--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -63,10 +63,10 @@
 .aboutItem h3 {
   font-size: 1.5rem;
   font-weight: 400;
-}git
+}
 
 .aboutItem p {
-  font-size: 1.25rem;
+  font-size: 1.3rem;
 }
 
 @media screen and (max-width: 830px) {
