--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -4,7 +4,7 @@
   position: relative;
   background-color: rgba(12, 12, 12, 0.6);
   border-radius: 15px;
-  padding: 73px;
+  padding: 3em;
   margin-top: 4em;
   z-index: 1;
   margin-left: 10%;
@@ -17,6 +17,7 @@
   font-weight: 700;
   letter-spacing: 1.75px;
   text-transform: uppercase;
+  margin-bottom: 1em;
 }
 
 .content {
@@ -103,5 +104,10 @@
   
   .aboutItem p {
     font-size: 1.1rem;
+  }
+
+  .title {
+    margin-bottom: .1em;
+    font-size: 1.8rem;
   }
 }
