--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -8,6 +8,7 @@
   box-shadow: 0 16px 14px 0 #04152d;
   padding: 18px 24px;
   max-width: 345px;
+  height: 620px;
 }
 
 .image {
@@ -49,6 +50,8 @@
   margin-top: 26px;
   display: flex;
   justify-content: space-around;
+  align-items: flex-end;
+  height: 100%;
 }
 
 .link {
