--- a/src/components/Carousel/Container.module.css
+++ b/src/components/Carousel/Container.module.css
@@ -118,7 +118,14 @@ ion-icon {
   display: none;
 }
 
+.swiper-button-prev:after, .swiper-button-next:after {
+  color: white;
+}
 
+.swiper-pagination-bullet {
+  background: white;
+  opacity: var(--swiper-pagination-bullet-inactive-opacity, 1);
+}
 
 /* .swiper_pagination .swiper_pagination_bullet {
   filter: drop-shadow(0px 4px 10px rgb(254, 254, 255));
